OpenLDAP 2.2 Change Log

OpenLDAP 2.2.13 Engineering
	Fixed pcache CSN pending segfault (ITS#3180)

OpenLDAP 2.2.12 Release
	Fixed slapd empty DN uniqueMember normalization
	Fixed slapd empty DN in proxyAuthx control
	Fixed slapd parsing of auth{cz} "dn:<pat>" rules
	Fixed slapd first component bug (ITS#3118)
	Fixed slapd TOLOWER macro use bug (ITS#3115)
	Fixed slapd TLS context clash bug (ITS#3109)
	Fixed slapd set acl recursion (ITS#3140)
	Fixed slapd entry2mods normalization bug (ITS#3144,3152)
	Fixed slapd extended match memory leak (ITS#3146)
	Fixed slapd syncrepl persist interval issue (ITS#3064)
	Fixed slapd abandon/cancel pending bug (ITS#3160)
	Fixed slapd sl_malloc memory leak (ITS#3155)
	Fixed back-ldap normalization bug 
	Fixed pcache cache_entries init bug (ITS#3150)
	Fixed pcache consistency_check bug (ITS#3151)
	Fixed pcache erroneous reply (ITS#3153)
	Fixed pcache remove_query_data bug (ITS#3170)
	Fixed libldap SASL mutex init bug (ITS#3123)
	Fixed libldap SASL buffering bug (ITS#3139)
	Fixed liblutil passwd seed len bug (ITS#3169)
	Build Environment
		Fixed liblber memory debug portability bug (ITS#3116)
		Fixed back-perl perl portability bug (ITS#2554,2946)

OpenLDAP 2.2.11 Release
	Fixed slapd undefined objectclass bug (ITS#3097)
	Fixed slapd acl dn="" bug
	Updated slapd limits handling
	Build Environment
		Fixed MacOSX sl_free interop bug (ITS#3092)
		Fixed libtool -static bug
		Added Berkeley DB mismatch check

OpenLDAP 2.2.10 Release
	Build Environment
		Fix configure bug (ITS#3094)

OpenLDAP 2.2.9 Release
	Fixed slapd syncrepl replication bugs (ITS#3055,3056,3069)
	Fixed slapd slurpd update bugs
	Fixed slapd inappropriate bind error disclosure bugs
	Fixed slapd sun_path portability bug
	Fixed slapd passwd referral memory leak
	Fixed slapd sasl userdb checkpass bug (ITS#3048)
	Fixed slapd duplicate value detection (ITS#3066)
	Fixed slapd permissive modify control (ITS#3068)
	Fixed slapd updateref handling