@@ -2,6 +2,7 @@ OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.13 Engineering
 	Fixed pcache CSN pending segfault (ITS#3180)
+	Added libldap cert check extension (ITS#3134)
 
 OpenLDAP 2.2.12 Release
 	Fixed slapd empty DN uniqueMember normalization
